--- a/OrbitSample/MainPage.xaml
+++ b/OrbitSample/MainPage.xaml
@@ -5,7 +5,7 @@
             <DataTemplate>
                 <ViewCell>
                     <Grid>
-                        <Label Text="{Binding Name}" />
+                        <Label Text="{Binding Name}" VerticalOptions="Center" />
                     </Grid>
                 </ViewCell>
             </DataTemplate>
